frontend/test/should_pass/successfulTermination_003.grg
test t
{	
	:P();
	:Q();
}

pattern P
{
	iterated {
		.;
		:P();
	}
}

pattern Q
{
	optional {
		.;
		:Q();
	}
}
